added styles folder & navbar

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
+	<head>
+		<link rel="stylesheet" href="style/index.css">
+	</head>
+	<body>
+		<div class="nav">
+		  <a class="active" href="index.html">Home</a>
+		  <a href="learn.html">Learn More</a>
+		  <a href="help.html">Help Us</a>
+		</div>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+		<h1>My First Heading</h1>
+		<p>My first paragraph.</p>
 
-</body>
+	</body>
 </html>
