--- a/help.html
+++ b/help.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style/help.css">
+		<link rel="stylesheet" href="style/index.css">
 	</head>
 	<body>
 		<div class="nav">
-		  <a href="index.html">Home</a>
+		  <a class="active" href="index.html">Home</a>
 		  <a href="learn.html">Learn More</a>
-		  <a class="active" href="help.html">Help Us</a>
+		  <a href="help.html">Help Us</a>
 		</div>
 
-		<h1>My First Heading</h1>
-		<p>Help</p>
+	<h1> Chemical Water Pollution </h1>
+	<img src = "pictures/pollution1.jpg" width = 50% height = 50%>	
+
+	<h2> Overwiew </h2>
+	<p> Water pollution occurs when undesirable foreign substances are introduced into natural water.The substances may be chemical or biologial in nature. Common pollutants human or animal waste, dicease-producing organisms, radioactive materials, toxic metals, agricultural chemicals, acid rain, and high temperature water.</p>
+
+	<h2> How did this Happen? </h2>
+
+	<p> For much of history, humans used waterways and bodies of water as waste dumps. When the human population was low, fewer people were exposed to the effects of pollution, and the resourses were fewer and produced less pollution. During the Industrial Revolution of the 19th century, water pollution was recognized as a danger to public health. </p>
+
+	<h2> How can you Help? </h2>
+
+	<p> There are many things you can do to help to prevent the further pollution of water. </p>
 
 	</body>
 </html>
