2nd Version of Index

--- a/index.html
+++ b/index.html
@@ -4,37 +4,39 @@
 		<link rel="stylesheet" href="style/index.css">
 	</head>
 	<body>
+		<div class="parallax">
 		<div class="nav">
 		  <a class="active" href="index.html">Home</a>
 		  <a href="learn.html">Learn More</a>
 		  <a href="help.html">Help Us</a>
 		</div>
+		<div class ="Headline">
+			<h1>The Ocean</h1>
+			<p>Home of the Fishes</p>
+		</div>
+	</div>
+		<div class ="Paragraph">
+			<h2> Are We Doing Enough To Help The Ocean? </h2>
+			<p2>Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB </p2>
+			<h3> The Short Answer is No. </h3>
 
-<<<<<<< HEAD
-		<h1>My First Heading</h1>
-		<p>My first paragraph.</p>
-=======
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<style>
-.parallax { 
-  /* The image used */
-  background-image: url("cleanOcean.jpg");
-
-  /* Set a specific height */
-  height: 500px; 
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-</style>
-
-<!-- Container element -->
-<div class="parallax"></div>
->>>>>>> 01f0f13... Index Branch
-
+		</div>
+		<div class="parallax2">
+			<div class ="Headline2">
+				<h1>New Ocean</h1>
+				<p>Home of the Plastics</p>
+			</div>
+		</div>
+		<div class ="Paragraph">
+			<h2> Do We Need To Do More To Help New Ocean? </h2>
+			<p2>Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB </p2>
+			<h3> The Short Answer is Yes. </h3>
+		</div>
+		<div class="parallax3">
+			<div class ="Headline2">
+				<h1>Bring Back The Ocean</h1>
+				<p>Our First Home</p>
+			</div>
+		</div>
 	</body>
 </html>
