--- a/help.html
+++ b/help.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style/index.css">
+		<link rel="stylesheet" href="style/help.css">
 	</head>
 	<body>
 		<div class="nav">
-		  <a class="active" href="index.html">Home</a>
+		  <a href="index.html">Home</a>
 		  <a href="learn.html">Learn More</a>
-		  <a href="help.html">Help Us</a>
+		  <a class="active"  href="help.html">Help Us</a>
 		</div>
 
-	<h1> Chemical Water Pollution </h1>
-	<img src = "pictures/pollution1.jpg" width = 50% height = 50%>	
+	<h1 class = main_header> Chemical Water Pollution </h1>
+	<img class = pollution_image_1 src = "pictures/pollution1.jpg">	
 
+<div class = "info">
 	<h2> Overwiew </h2>
 	<p> Water pollution occurs when undesirable foreign substances are introduced into natural water.The substances may be chemical or biologial in nature. Common pollutants human or animal waste, dicease-producing organisms, radioactive materials, toxic metals, agricultural chemicals, acid rain, and high temperature water.</p>
 
@@ -22,7 +23,27 @@
 
 	<h2> How can you Help? </h2>
 
-	<p> There are many things you can do to help to prevent the further pollution of water. </p>
+	<p> There are many things you can do to help to prevent the further pollution of water. Here you can find a list of precautions you need to consider to make your everyday activities as water-friendly as possible: </p>
 
+	<ul>
+
+		<li> Conserve water by turning off the tap when running water is not necessary. This helps prevent water shortages and reduces the amount of contaminated water that needs treatment. </li>
+		<li> Be careful about what you throw down your sink or toilet. Don’t throw paints, oils or other forms of litter down the drain. Use environmentally household products, such as washing powder, household cleaning agents and toiletries. </li>
+		<li> Don’t throw litter into rivers, lakes or oceans. Help clean up any litter you see on beaches or in rivers and lakes, make sure it is safe to collect the litter and put it in a nearby dustbin. </li>
+		<li> Take great care not to overuse pesticides and fertilisers. This will prevent runoffs of the material into nearby water sources. </li>
+		<li> By having more plants in your garden you are preventing fertiliser, pesticides and contaminated water from running off into nearby water sources. </li>
+
+	</ul>
+
+	<h2> Looking for more ways to help? </h2>
+	
+	<p> Our organization fights against the water pollution by helping to clean the waterways and improving the existing waste-recycling systems. A small donation from you will help us to continue providing our services to the numerous waste-recycling facilities across the country and it will also let us clean the waterways with a higher speed and efficiency. </p>
+</div>
+
+<a href = "https://theoceancleanup.com/donate/">
+	<div class = "donate" href = "https://theoceancleanup.com/donate/" >
+		<p> Donate </p>
+	</div>
+</a>
 	</body>
 </html>
