quick grammar fix

--- a/help.html
+++ b/help.html
@@ -14,7 +14,7 @@
 	<img class = pollution_image_1 src = "pictures/pollution1.jpg">	
 
 <div class = "info">
-	<h2> Overwiew </h2>
+	<h2> Overview </h2>
 	<p> Water pollution occurs when undesirable foreign substances are introduced into natural water.The substances may be chemical or biologial in nature. Common pollutants human or animal waste, dicease-producing organisms, radioactive materials, toxic metals, agricultural chemicals, acid rain, and high temperature water.</p>
 
 	<h2> How did this Happen? </h2>
