--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</div>
 		<div class ="Paragraph">
 			<h2> Are We Doing Enough To Help The Ocean? </h2>
-			<p2>Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB </p2>
+			<p2>Every day approximately 8 million pieces of plastic pollution find their way into our oceans. There may now be around 5.25 trillion macro and microplastic pieces floating in the open ocean. Weighing up to 269,000 tonnes. Plastics consistently make up 60 to 90% of all marine debris studied. Recent studies have revealed marine plastic pollution in 100% of marine turtles, 59% of whales, 36% of seals and 40% of seabird species examined.<br> -Surfers Against Sewage</p2>
 			<h3> The Short Answer is No. </h3>
 
 		</div>
@@ -29,7 +29,9 @@
 		</div>
 		<div class ="Paragraph">
 			<h2> Do We Need To Do More To Help New Ocean? </h2>
-			<p2>Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB Blub Blub blub blub BlUB </p2>
+			<p2>For more than 30 years, Ocean Conservancy has brought together more than 12 million volunteers from 153 countries to participate in our annual International Coastal Cleanup. In that time, volunteers have picked up more than 220 million pounds of trash from the world's beaches. We're so proud of the work this global family of volunteers has achieved together, but with plastic production increasing around the world, it's clear that the ultimate solution is to keep plastic out of the ocean in the first place. <br>-OceanConservancy
+			<br>
+			Even with all of the volunteers helping out, there is still way more plastics floating around in the Ocean and we need all the help we can get. </p2>
 			<h3> The Short Answer is Yes. </h3>
 		</div>
 		<div class="parallax3">
