--- a/help.html
+++ b/help.html
@@ -15,11 +15,11 @@
 
 <div class = "info">
 	<h2> Overview </h2>
-	<p> Water pollution occurs when undesirable foreign substances are introduced into natural water.The substances may be chemical or biologial in nature. Common pollutants human or animal waste, dicease-producing organisms, radioactive materials, toxic metals, agricultural chemicals, acid rain, and high temperature water.</p>
+	<p> Water pollution occurs when undesirable foreign substances are introduced into natural water.The substances may be chemical or biological in nature. Common pollutants human or animal waste, disease-producing organisms, radioactive materials, toxic metals, agricultural chemicals, acid rain, and high temperature water.</p>
 
 	<h2> How did this Happen? </h2>
 
-	<p> For much of history, humans used waterways and bodies of water as waste dumps. When the human population was low, fewer people were exposed to the effects of pollution, and the resourses were fewer and produced less pollution. During the Industrial Revolution of the 19th century, water pollution was recognized as a danger to public health. </p>
+	<p> For much of history, humans used waterways and bodies of water as waste dumps. When the human population was low, fewer people were exposed to the effects of pollution, and the resources were fewer and produced less pollution. During the Industrial Revolution of the 19th century, water pollution was recognized as a danger to public health. </p>
 
 	<h2> How can you Help? </h2>
 
@@ -30,8 +30,8 @@
 		<li> Conserve water by turning off the tap when running water is not necessary. This helps prevent water shortages and reduces the amount of contaminated water that needs treatment. </li>
 		<li> Be careful about what you throw down your sink or toilet. Don’t throw paints, oils or other forms of litter down the drain. Use environmentally household products, such as washing powder, household cleaning agents and toiletries. </li>
 		<li> Don’t throw litter into rivers, lakes or oceans. Help clean up any litter you see on beaches or in rivers and lakes, make sure it is safe to collect the litter and put it in a nearby dustbin. </li>
-		<li> Take great care not to overuse pesticides and fertilisers. This will prevent runoffs of the material into nearby water sources. </li>
-		<li> By having more plants in your garden you are preventing fertiliser, pesticides and contaminated water from running off into nearby water sources. </li>
+		<li> Take great care not to overuse pesticides and fertilizers. This will prevent runoffs of the material into nearby water sources. </li>
+		<li> By having more plants in your garden you are preventing fertilizer, pesticides and contaminated water from running off into nearby water sources. </li>
 
 	</ul>
 
@@ -40,7 +40,7 @@
 	<p> Our organization fights against the water pollution by helping to clean the waterways and improving the existing waste-recycling systems. A small donation from you will help us to continue providing our services to the numerous waste-recycling facilities across the country and it will also let us clean the waterways with a higher speed and efficiency. </p>
 </div>
 
-<a href = "https://theoceancleanup.com/donate/">
+<a class = "donate_link" href = "https://theoceancleanup.com/donate/">
 	<div class = "donate" href = "https://theoceancleanup.com/donate/" >
 		<p> Donate </p>
 	</div>
